# polyvectorize

./: LICENSE  polyvectorize.cabal  stack.yaml
src/: PolyVec.hs
src/PolyVec/: Class.hs  Orphans.hs  PartialDesign.hs  Stuff.hs  Writeup.hs
