name:                polyvectorize
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/polyvectorize#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PolyVec.Class
                       PolyVec.Orphans
                       PolyVec.Stuff
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       binary,
                       generic-accessors,
                       linear,
                       spatial-math,
                       TypeCompose,
                       vector

  default-language:    Haskell2010

--executable polyvectorize-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , polyvectorize
--  default-language:    Haskell2010
--
--test-suite polyvectorize-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , polyvectorize
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/polyvectorize
